--- a/api-project/main.css
+++ b/api-project/main.css
@@ -1,7 +1,22 @@
 .hidden{
     display: none;
 }
+.col-12{
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+}
 body{
     font-family: 'Open Sans', sans-serif;
     font-weight: 300;
+}
+.emoji{
+    text-align: center;
+    width: 2em;
+    height: 2em;
+    border-radius: 1em;
+    border: #3b7898;
+    background-color: #6C9DC9;
+    font-size: 5em;
+    margin: .5em;
 }
