--- a/api-project/main.css
+++ b/api-project/main.css
@@ -10,6 +10,10 @@ body{
     font-family: 'Open Sans', sans-serif;
     font-weight: 300;
 }
+.emoji-setup{
+    margin-left: auto;
+    margin-right: auto;
+}
 .emoji{
     text-align: center;
     width: 2em;
@@ -18,5 +22,5 @@ body{
     border: #3b7898;
     background-color: #6C9DC9;
     font-size: 5em;
-    margin: .5em;
+    margin: .15em;
 }
