--- a/api-project/main.css
+++ b/api-project/main.css
@@ -6,7 +6,7 @@
     margin-left: auto;
     margin-right: auto;
 }
-body{
+body, footer{
     font-family: 'Open Sans', sans-serif;
     font-weight: 300;
 }
@@ -23,4 +23,25 @@ body{
     background-color: #6C9DC9;
     font-size: 5em;
     margin: .15em;
+}
+header h1{
+    text-align: center;
+    font-size: 3em;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 300;
+}
+footer{
+    text-align: center;
+}
+h2{
+    font-size: 1.2em;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 300;
+    margin-top: -.1em;
+}
+.grey{
+    background-color: #868989;
+}
+.darkgrey{
+    background-color: #545757;
 }
