--- a/api-project/main.css
+++ b/api-project/main.css
@@ -22,7 +22,17 @@ body, footer{
     border: #3b7898;
     background-color: #6C9DC9;
     font-size: 5em;
-    margin: .15em;
+    margin: .15em .15em .3em .15em;
+}
+.get-playlist{
+    border: none;
+    background-color: #b6b16f;
+    font-size: 1em;
+    color: #ffffff;
+    border-radius: .2em;
+    text-align: center;
+    padding: .5em .7em;
+    margin: 1.2em;
 }
 header h1{
     text-align: center;
@@ -37,11 +47,12 @@ h2{
     font-size: 1.2em;
     font-family: 'Open Sans', sans-serif;
     font-weight: 300;
-    margin-top: -.1em;
 }
 .grey{
     background-color: #868989;
+    height: .5em;
 }
 .darkgrey{
     background-color: #545757;
+    height: .5em;
 }
