--- a/api-project/main.css
+++ b/api-project/main.css
@@ -80,10 +80,13 @@ h2{
 }
 .js-nav-buttons{
     margin-bottom: 1em;
+    display: inline-block;
 }
 .js-prev{
     text-align: left;
+    margin-left: auto;
 }
 .js-next{
     text-align: right;
+    margin-right: auto;
 }
